--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "thru.io/starter-kit",
+  "name": "thru.io/tiger-kit",
   "description": "Starter kit using Slim, Active Record, Sessions, Translation, Docker all in a can.",
   "license": "GPL V2",
   "authors": [
