Add less compiler.

--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,8 @@
     "thru.io/session": "dev-master",
     "flynsarmy/slim-monolog": "~1.0",
     "symfony/yaml": "2.6.6",
-    "twbs/bootstrap": "3.3.5"
+    "twbs/bootstrap": "3.3.5",
+    "leafo/lessphp": "0.4.0"
   },
   "require-dev": {
     "phpunit/phpunit": "*",
