Fix travis mysql settings hopefully

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,12 @@ language: php
 
 php: 5.5
 
+env:
+  - HOST=Travis
+
 before_script :
   - composer install
-  - mysql -e 'create database tigerkitstarterapp;'
+  - mysql -e 'create database tigerkit;'
   - mysql -e "use mysql; SET PASSWORD FOR 'travis'@'localhost' = PASSWORD('travis'); FLUSH PRIVILEGES;"
 
 after_script:
