--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,10 @@
     "symfony/yaml": "2.6.6",
     "twbs/bootstrap": "3.3.5",
     "leafo/lessphp": "0.4.0",
-    "league/flysystem": "~1.0"
+    "league/flysystem": "~1.0",
+    "league/flysystem-ziparchive": "~1.0",
+    "league/flysystem-dropbox": "~1.0",
+    "league/flysystem-aws-s3-v3": "~1.0"
   },
   "require-dev": {
     "phpunit/phpunit": "*",
