--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,8 @@
     "league/flysystem": "~1.0",
     "league/flysystem-ziparchive": "~1.0",
     "league/flysystem-dropbox": "~1.0",
-    "league/flysystem-aws-s3-v3": "~1.0"
+    "league/flysystem-aws-s3-v3": "~1.0",
+    "doctrine/cache": "~1.4"
   },
   "require-dev": {
     "phpunit/phpunit": "*",
