--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,7 @@
     "thru.io/translation": "dev-master",
     "thru.io/session": "dev-master",
     "flynsarmy/slim-monolog": "~1.0",
+    "monolog/monolog": "~1.0",
     "symfony/yaml": "2.6.6",
     "twbs/bootstrap": "3.3.5",
     "leafo/lessphp": "0.4.0",
