--- a/composer.json
+++ b/composer.json
@@ -27,8 +27,8 @@
     }
   ],
   "require": {
-    "slim/slim": "~2.6",
-    "filp/whoops": "1.*",
+    "slim/slim": "~2.6@stable",
+    "filp/whoops": "1.*@stable",
     "zeuxisoo/slim-whoops": "dev-master",
     "raveren/kint": "dev-master",
     "predis/predis": "1.0.*@dev",
@@ -36,7 +36,7 @@
     "thru.io/active_record_migrations": "dev-master",
     "thru.io/translation": "dev-master",
     "thru.io/session": "dev-master",
-    "flynsarmy/slim-monolog": "~1.0",
+    "flynsarmy/slim-monolog": "~1.0@stable",
     "monolog/monolog": "~1.0@stable",
     "symfony/yaml": "2.6.6",
     "twbs/bootstrap": "3.3.5",
