--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,14 @@
     {
       "url": "https://github.com/Thruio/Translation.git",
       "type": "git"
+    },
+    {
+      "url": "git@github.com:Thruio/TigerKit.git",
+      "type": "git"
+    },
+    {
+      "url": "git@github.com:Thruio/TigerSampleApp.git",
+      "type": "git"
     }
   ],
   "require": {
