--- a/composer.json
+++ b/composer.json
@@ -38,12 +38,12 @@
     "slim/slim": "~2.6@stable",
     "filp/whoops": "1.*@stable",
     "zeuxisoo/slim-whoops": "dev-master",
-    "raveren/kint": "dev-master",
+    "raveren/kint": "dev-master@dev",
     "predis/predis": "1.0.*@dev",
     "thru.io/active_record": ">=0.4",
-    "thru.io/active_record_migrations": "dev-master",
-    "thru.io/translation": "dev-master",
-    "thru.io/session": "dev-master",
+    "thru.io/active_record_migrations": "dev-master@dev",
+    "thru.io/translation": "dev-master@dev",
+    "thru.io/session": "dev-master@dev",
     "flynsarmy/slim-monolog": "~1.0@stable",
     "monolog/monolog": "~1.0@stable",
     "symfony/yaml": "2.6.6",
