--- a/composer.json
+++ b/composer.json
@@ -41,9 +41,9 @@
     "raveren/kint": "^1.0",
     "predis/predis": "1.0.*@dev",
     "thru.io/active_record": ">=0.4",
-    "thru.io/active_record_migrations": "dev-master@dev",
-    "thru.io/translation": "dev-master@dev",
-    "thru.io/session": "dev-master@dev",
+    "thru.io/active_record_migrations": "^0.1",
+    "thru.io/translation": "^0.1",
+    "thru.io/session": "^1.0",
     "flynsarmy/slim-monolog": "~1.0@stable",
     "monolog/monolog": "~1.0@stable",
     "symfony/yaml": "2.6.6",
