--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,7 @@
   "require": {
     "slim/slim": "~2.6@stable",
     "filp/whoops": "1.*@stable",
-    "zeuxisoo/slim-whoops": "dev-master",
+    "zeuxisoo/slim-whoops": "^0.4.0",
     "raveren/kint": "^1.0",
     "predis/predis": "1.0.*@dev",
     "thru.io/active_record": ">=0.4",
