--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,18 @@
 language: php
 
-php: 5.5
+php:
+  - 5.4
+  - 5.5
+  - 5.6
+  - hhvm
+  - 7.0
+  - nightly
+
+matrix:
+  allow_failures:
+    - php: 5.4
+    - php: hhvm
+    - php: nightly
 
 env:
   - HOST=Travis
